--- a/17-11-2021/style/style.css
+++ b/17-11-2021/style/style.css
@@ -125,7 +125,7 @@ li:before {
 }
 
 #container,
-article {
+article{
 
   color: white;
   font-weight: bold;
@@ -140,7 +140,10 @@ article {
 
 }
 
+p {
+  font-size: 20px;
 
+}
 
 ul,
 form {
