--- a/18-11-2021/esercizio svolto/css/style.css
+++ b/18-11-2021/esercizio svolto/css/style.css
@@ -1,26 +1,38 @@
+* {
+   background-color: lightslategray;
+
+}
+
 
 body {
-    margin: 0;
-    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 
 }
 
-#sfondo {
-    width: 100%;
-    height: 600px;
+#container {
+    width: 700px;
+    height: 400px;
     position: relative;
-    /* margin-left: 30%; */
-    background-repeat: no-repeat;
-    background-size: cover;
+    padding-bottom: 25px;
+}
+
+#sfondo{
+    border: solid 10px rgb(14, 1, 1);
+    width: 700px;
+    height: 400px;
+    position: absolute;
     background-image: url(./sfondo.jpg);
-    border: 2px solid #999;
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 
 .girl{
     position: absolute;
-    top: 70%;
-    left: 50%;
+    top: 50%;
+    left: 70%;
     transform: translate(-50%, -50%);
     width: 150px;
     height: 600px;
@@ -29,7 +41,8 @@ body {
 
 .girl1{
     position: absolute;
-    top: 60%;
+    
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: calc(600px/4);
@@ -38,6 +51,30 @@ body {
     animation: animate 1s steps(4);
     transition: all 1s;
 }
+.girl4{
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(600px/4);
+    height: 600px;
+    background: url(WalkingGirl.png);
+    animation: animate 1s steps(4);
+    transition: all 1s;
+}
+@keyframes animate
+{
+    from 
+    {
+        background-position: 0;
+    }
+
+    to 
+    {
+        background-position: -600px;
+    }
+}
+
 @keyframes animate
 {
     from 
@@ -99,35 +136,13 @@ body {
         background-position: -600px;
     }
 }
-.girl4{
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: calc(600px/4);
-    height: 600px;
-    background: url(WalkingGirl.png);
-    animation: animate 1s steps(4);
-    transition: all 1s;
-}
-@keyframes animate
-{
-    from 
-    {
-        background-position: 0;
-    }
 
-    to 
-    {
-        background-position: -600px;
-    }
-}
+
+/* /// Bottoni */
 
 .Btn {
     display: grid;
-    margin-left: 50%;
-    left: 44%;
-    top: 70%;
+    position: relative;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-auto-columns: 1fr;
@@ -139,22 +154,24 @@ body {
       "a s d";
     width: 200px;
     height: 150px;
+
   
   }
   
   .w { 
       grid-area: w;
-      background-color: grey ;
+      background-color: rgb(9, 146, 146) ;
       text-align: center; 
       padding-top: 40%;
       box-shadow: 8px 10px 10px rgba(75, 74, 82, 0.267);
       border-radius: 20px;
+      
 
     }
   
   .a { 
       grid-area: a; 
-      background-color: grey ; 
+      background-color: rgb(20, 172, 96) ; 
       text-align: center; 
       padding-top: 40%;
       box-shadow: 8px 10px 10px rgba(75, 74, 82, 0.267);
@@ -164,7 +181,7 @@ body {
   
   .s { 
       grid-area: s;       
-      background-color: grey ; 
+      background-color: rgb(206, 82, 82) ; 
       text-align: center; 
       padding-top: 40%;
       box-shadow: 8px 10px 10px rgba(75, 74, 82, 0.267);
@@ -174,7 +191,7 @@ body {
   
   .d { 
       grid-area: d;       
-      background-color: grey ; 
+      background-color: rgb(80, 80, 238) ; 
       text-align: center; 
       padding-top: 40%;
       box-shadow: 8px 10px 10px rgba(75, 74, 82, 0.267);
